verif/test/deca/codegen/invalid/loops/while-sans-bool-verif.res
src/test/deca/codegen/invalid/loops/while-sans-bool.deca:10:10: Condition types is not valid, expected BOOLEAN
